# CppMCServerManager

./: .gitignore  CMakeLists.txt  README.md  version.h.in
src/: CMakeLists.txt  main.cpp  main.h  version.h
src/interface/: CommonComponent.cpp  CommonComponent.h  CommonElement.cpp  CommonElement.h
src/interface/control/: CmdInput.cpp  CmdInput.h  CmdOutput.cpp  CmdOutput.h
src/module/: ChildSession.cpp  ChildSession.h  VirtualShell.cpp  VirtualShell.h
test/childSession/: CMakeLists.txt  main.cpp
test/server/: run.sh
test/server/velocity/: velocity.toml
test/server/velocity/plugins/bStats/: config.txt
